--- a/src/admin/views/ambulance_screen.html
+++ b/src/admin/views/ambulance_screen.html
@@ -178,6 +178,9 @@
 
     <script src="/public/js/utils.js"></script>
     <script src="/public/js/logoutModal.js"></script>
+    <script>
+      setupLogoutModal("login_screen.html");
+    </script>
     <script src="/public/js/navActive.js"></script>
     <script src="/public/js/ambulances.js"></script>
     <script src="/src/admin/js/script.js"></script>
