--- a/src/admin/views/dashboard_screen.html
+++ b/src/admin/views/dashboard_screen.html
@@ -90,6 +90,9 @@
 
     <script src="/public/js/utils.js"></script>
     <script src="/public/js/logoutModal.js"></script>
+    <script>
+      setupLogoutModal("login_screen.html");
+    </script>
     <script src="/public/js/dashboard.js"></script>
     <script src="/public/js/navActive.js"></script>
     <script src="/src/admin/js/script.js"></script>
