--- a/src/admin/views/maintenance_screen.html
+++ b/src/admin/views/maintenance_screen.html
@@ -130,6 +130,9 @@
 
     <script src="/public/js/utils.js"></script>
     <script src="/public/js/logoutModal.js"></script>
+    <script>
+      setupLogoutModal("login_screen.html");
+    </script>
     <script src="/public/js/navActive.js"></script>
     <script src="/public/js/maintenance.js"></script>
     <script src="/src/admin/js/script.js"></script>
