--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,19 +1,16 @@
-/* Styling dasar */
 body {
   font-family: "Inter", sans-serif;
   -webkit-tap-highlight-color: transparent;
 }
 
-/* Styling untuk Navigasi Bawah yang Aktif */
 .nav-active div {
-  background-color: #efe8ff; /* Light purple background */
+  background-color: #efe8ff;
 }
 .nav-active span {
-  color: #5b2eff; /* Purple text */
+  color: #5b2eff;
   font-weight: 600;
 }
 
-/* Styling untuk modal (bisa digabung dengan reservation.css jika sama) */
 #reservationModal.hidden {
   display: none;
 }
