--- a/src/user/views/profile_screen.html
+++ b/src/user/views/profile_screen.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/public/img/RescueGo-SideBarLogo.svg" />
 
     <link rel="stylesheet" href="/public/css/global.css" />
+    <link rel="stylesheet" href="/src/admin/css/style.css" />
     <link rel="stylesheet" href="/src/user/css/profile.css" />
 
     <script src="https://cdn.tailwindcss.com"></script>
